--- a/index.html
+++ b/index.html
@@ -56,11 +56,19 @@
 					</section>
 
 					<section>
-						<h3>Un héros grecque</h3>
-						<p>
-							<img src="images/heros.jpg" style="width: 50vh">
-						</p>
-					</section>
+                        <h3>Un héros grecque</h3>
+                        <p>
+                            <img src="images/heros.jpg" style="width: 50vh">
+                        </p>
+                    </section>
+
+                    <section>
+                        <h3>C'est comme 33</h3>
+                        <p>
+                            ca n'existe pas<br><br>
+                            <img src="images/paul.jpg" style="width: 50vh">
+                        </p>
+                    </section>
 				</section>
 
 
